--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "hosted-hubot",
   "version": "2.7.1",
-
   "author": "GitHub Inc.",
-
   "keywords": [
     "github",
     "hubot",
     "campfire",
     "bot"
   ],
-
   "description": "A simple helpful robot for your Company",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
-    "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot": "~2.7.1",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-irc": "~0.1.24",
+    "bitcoin": "~2.0.1",
+    "cheerio": "~0.13.1",
+    "moment": "~2.5.1",
+    "timestring": "~1.0.1",
+    "request": "~2.33.0"
   },
-
   "engines": {
     "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "npm": ">= 1.1.x"
   }
 }
