--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "hosted-hubot",
-  "version": "2.7.1",
-  "author": "GitHub Inc.",
+  "name": "dataninja-hubot",
+  "version": "0.0.1",
+  "author": "Jason May",
   "keywords": [
     "github",
     "hubot",
-    "campfire",
+    "irc",
     "bot"
   ],
-  "description": "A simple helpful robot for your Company",
+  "description": "Bot that is a ninja with data",
   "licenses": [
     {
       "type": "MIT",
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/github/hubot.git"
+    "url": "https://github.com/jasonmay/dataninja-hubot.git"
   },
   "dependencies": {
     "hubot": "~2.7.1",
